Added k8s template
