# src/docs/swagger.json
@@ -4,6 +4,18 @@
         "contact": {}
     },
     "paths": {
+        "/healthz": {
+            "get": {
+                "description": "Healthiness of the jwk service",
+                "summary": "Healhiness probe",
+                "operationId": "healthz",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/jwk/generate": {
             "get": {
                 "description": "Randomly generates a jwk pair (public and private)",
@@ -71,6 +83,18 @@
                         "schema": {
                             "type": "string"
                         }
+                    }
+                }
+            }
+        },
+        "/readiness": {
+            "get": {
+                "description": "Readiness of the jwk service",
+                "summary": "Readiness probe",
+                "operationId": "readiness",
+                "responses": {
+                    "200": {
+                        "description": ""
                     }
                 }
             }
